--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,5 +7,6 @@ edition = "2021"
 
 [dependencies]
 clap = { version = "4.5.4", features = ["derive"] }
+rayon = "1.10.0"
 regex = "1.10.4"
 serde_json = "1.0.116"
