--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,6 +7,7 @@ edition = "2021"
 
 [dependencies]
 clap = { version = "4.5.4", features = ["derive"] }
+mimalloc = "0.1.41"
 rayon = "1.10.0"
 regex = "1.10.4"
 serde_json = "1.0.116"
