--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,3 +11,11 @@ mimalloc = "0.1.41"
 rayon = "1.10.0"
 regex = "1.10.4"
 serde_json = "1.0.116"
+simd-json = "0.13.10"
+
+[dev-dependencies]
+criterion = "0.3"
+
+[[bench]]
+name = "build_schema_bench"
+harness = false
