--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,6 +14,7 @@ serde_json = "1.0.116"
 simd-json = "0.13.10"
 
 [dev-dependencies]
+codspeed-criterion-compat = "2.6.0"
 criterion = "0.3"
 
 [[bench]]
