--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,6 +2,13 @@
 name = "genson-rs"
 version = "0.1.0"
 edition = "2021"
+description = "Extremely fast JSON Schema inference engine built in Rust"
+homepage = "https://github.com/junyu-w/genson-rs"
+repository = "https://github.com/junyu-w/genson-rs"
+readme = "README.md"
+license-file = "LICENSE"
+keywords = ["json", "schema", "inference", "genson", "serde", "simd"]
+categories = ["command-line-utilities", "parser-implementations"]
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
