--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,7 +8,7 @@ homepage = "https://github.com/junyu-w/genson-rs"
 repository = "https://github.com/junyu-w/genson-rs"
 readme = "README.md"
 license-file = "LICENSE"
-keywords = ["json", "schema", "inference", "genson", "serde", "simd"]
+keywords = ["json", "schema", "inference", "genson"]
 categories = ["command-line-utilities", "parser-implementations"]
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
